--- a/CSS/Layouts/footer.css
+++ b/CSS/Layouts/footer.css
@@ -35,7 +35,7 @@
 /* Ajustar los elementos de contacto */
 .contact-item {
     width: 280px;
-    text-align: left;
+    text-align: center;
     margin-bottom: 20px;
 }
 
